BUT longer person names stop alignment working properly

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -7,13 +7,13 @@ body, html {
 }
 
 .list-container {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-evenly;
-    display: table;
-    border-collapse: separate;
-    border-spacing: 0 8px;
-    padding-top: 0.6em;
+    display: flex;
+    flex-direction: column;
+
+    // display: table;
+    // border-collapse: separate;
+    // border-spacing: 0 8px; // no longer needed since we can specify spacing in list-item
+    padding-top: 0.6em; // padding from top of page
 }
 
 .list-item {
@@ -25,14 +25,22 @@ body, html {
     // flex-direction: row;
     // align-items: center;
 
-    display: table-row;
+    display: flex;
+    border-radius: 0.5rem; // rounded corners
+    margin-bottom: 0.3rem; // space between each list-item
+    align-items: center; // vertically align children
     // trying rounded table row corners https://stackoverflow.com/a/16971333/3024923
-    
+    justify-content: space-evenly;
 
     .handle {
         // display: table-cell;
-        margin-left: 0.7em;
+        // margin-left: 0.7em;
         cursor: move;
+        // flex: 0.1;
+        margin-left: 1rem;
+        // align-self: center;
+        // display: grid;
+        // place-items: center;
     }
 
     .list-item-person {
@@ -43,21 +51,34 @@ body, html {
         border-left: 1em solid transparent;
         border-bottom: 0.9em solid transparent;
         border-top: 0.9em solid transparent;
-        display: table-cell;
+        // margin-right: 1rem;
+        // display: table-cell;
+        // flex: 2.5;
+        flex-basis: auto;
+        flex-grow: 2;
     }
 
     .list-item-game {
         // align-self: flex-start;
         // flex-grow: 1;
         border-left: 1em solid transparent;
-        
-        display: table-cell;
+        // margin-right: 4em;
+        // flex: 1.15;
+        // flex-shrink: 0;
+        // flex-basis: auto;
+        // flex-shrink: 1.5;
+        // flex-grow: 1.5;
+        flex: 3;
+        // white-space: nowrap; // stops wrapping but no more alignment
+        // place-items: center;
+        // display: table-cell;
         // align-items: center;
-        vertical-align: middle;
+        // vertical-align: middle; // no longer needed since align-items: center on parent (list-item)
         // border-bottom: 1em solid transparent;
         // text-align: center; // makes text center aligned (horizontally)
         padding-top: 0.4em;
         padding-bottom: 0.4em;
+        // padding-right: 3em;
         .list-item-remarks {
             display: table-cell; // to make the div wrap tightly around the text
             background-color: rgb(231, 231, 231);
@@ -84,27 +105,24 @@ body, html {
     }
 
     .list-item-control-buttons {
-        float: right;
-        // padding-right: 1em;
-        display: table-cell;
-        border-left: 1em solid transparent;
+        // display: table-cell;
+        // flex: 1.7;
+        // display: flex;
+        // display: inline-block;
+        border-left: 1.5em solid transparent;
         border-right: 0.7em solid transparent;
-        vertical-align: middle;
-        // width: 500px;
+        // vertical-align: middle;
+        // align-items: flex-end;
+        // display: grid;
+        // place-items: center;
+        font-size: 24px;
 
         .delete-confirmation {
-            // float: right;
-            // padding: 5em;
-            // display: inline-block;
-
-            margin-top: 3px;
+            margin-top: 0.4rem;
         }
 
         .delete-button {
-            // float: right;
-            
-            // display: inline-block;
-            margin-top: 3px;
+            margin-top: 0.4rem;
             background-color: red;
         }
 
@@ -112,8 +130,8 @@ body, html {
             // float: left;
             // display: inline-block;
 
-            margin-right: 5px;
-            margin-top: 3px;
+            margin-right: 0.4rem;
+            // margin-top: 3px;
             color: hsl(252, 0%, 32%); // dark gray
 
             
